--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 <a href="http://girldevelopit.github.io/gdi-featured-intermediate-html-css/workshop-files.zip">http://girldevelopit.github.io/gdi-featured-intermediate-html-css/workshop-files.zip</a></p>
             </section>
             <section>
-                <h2>Thanks to our host:</h2>
+                <h2>Thanks to our host: <a href="http://www.galvanize.com/" target="_new">Galvanize NYC</a></h2>
             </section>
             <section>
                 <h3>Class notes</h3>
                 <p>All slides are available at:<br />
-                <a href="http://girldevelopit.github.io/gdi-featured-intermediate-html-css/">http://girldevelopit.github.io/gdi-featured-intermediate-html-css/</a></p>
+                <a href="http://papermashea.github.io/gdi-featured-html-css-intermediate/">http://papermashea.github.io/gdi-featured-intermediate-html-css</a></p>
             </section>
             <!-- Welcome-->
             <section class="hide-pdf">
@@ -82,10 +82,15 @@
                 </div>
             </section>
             <section class="hide-pdf">
-                <h3>Thank you to our Teaching Assistants today</h3>
+                <h3>Thank you to our Teaching Assistants today!</h3>
             </section>
             <section class="hide-pdf">
                 <h3>About your instructor</h3>
+                    <ul>
+                        <li>snake and cat momma</li>
+                        <li>designer by trade, maker by choice</li>
+                        <li>once killed a cactus</li>
+                    </ul>
             </section>
             <section class="hide-pdf">
                 <h3>Now it's all about you!</h3>
