--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
             <section>
                 <h3>Class notes</h3>
                 <p>All slides are available at:<br />
-                <a href="http://papermashea.github.io/gdi-featured-html-css-intermediate/">http://papermashea.github.io/gdi-featured-intermediate-html-css</a></p>
+                <a href="papermashea.github.io/gdi-featured-html-css-intermediate/">http://papermashea.github.io/gdi-featured-intermediate-html-css</a><br>
+                    original:
+                <a href="http://girldevelopit.github.io/gdi-featured-html-css-intermediate/#/">http://girldevelopit.github.io/gdi-featured-html-css-intermediate</a></p>
+            
             </section>
             <!-- Welcome-->
             <section class="hide-pdf">
@@ -87,9 +90,10 @@
             <section class="hide-pdf">
                 <h3>About your instructor</h3>
                     <ul>
-                        <li>snake and cat momma</li>
-                        <li>designer by trade, maker by choice</li>
-                        <li>once killed a cactus</li>
+                        <li>Proud snake and cat owner</li>
+                        <li>Designer by trade, maker by choice</li>
+                        <li>Somehow managed to mess up mac and cheese once</li>
+                        <li>@papermashea basically everywhere on the internet</li>
                     </ul>
             </section>
             <section class="hide-pdf">
