--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <h2>Welcome!</h2>
                 <h4 class="blue">Wifi Info</h4>
                 <p>
-                    <strong>Network: </strong></p>
+                    <strong>Network: galvanize guest</strong></p>
                 <p>
-                    <strong>Password: </strong></p>
+                    <strong>You'll be prompted for your Name + Email</strong></p>
                 <br/>
                 <h3>Download workshop files</h3>
                 <p>Please download workshop files at:<br />
