--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>
                     <strong>Network: galvanize guest</strong></p>
                 <p>
-                    <strong>You'll be prompted for your Name + Email</strong></p>
+                    <strong>You'll be prompted for your name + email</strong></p>
                 <br/>
                 <h3>Download workshop files</h3>
                 <p>Please download workshop files at:<br />
