--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <br/>
                 <h3>Download workshop files</h3>
                 <p>Please download workshop files at:<br />
-                <a href="https://github.com/papermashea/gdi-featured-html-css-intermediate/blob/gh-pages/workshop-files.zip">http://girldevelopit.github.io/gdi-featured-intermediate-html-css/workshop-files.zip</a></p>
+                <a href="https://github.com/papermashea/gdi-featured-html-css-intermediate/blob/gh-pages/workshop-files.zip">https://github.com/papermashea/gdi-featured-html-css-intermediate/blob/gh-pages/workshop-files.zip</a></p>
             </section>
             <section>
                 <h2>Thanks to our host: <a href="http://www.galvanize.com/" target="_new">Galvanize NYC</a></h2>
