adding line breaks

--- a/index.html
+++ b/index.html
@@ -599,15 +599,15 @@ nav ul {
                 
                         </section>
         <section>
-                <h3>What did we do last time?</h3>
+                <h3>What did we do last time?</h3><br>
             <ul>   
-                <li>history of html5</li>
-                <li>new structural elements: section, header, nav, footer, aside, article</li>
-                <li>beginning our profile from scratch</li>
-            </ul>
+                <li>history of html5</li><br>
+                <li>new structural elements: section, header, nav, footer, aside, article</li><br>
+                <li>beginning our profile from scratch</li><br>
+            </ul><br>
             <p>Where did we leave off...</p>
             </section>
-        
+        <section><h3>Back to your profile page!</h3></section>
             <section data-background="#f05b62">
                 <h1 style="color: #fafafa;">Hero Section</h1>
             </section>
