--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+vig<!doctype html>
 <html lang="en">
 
 <head>
@@ -601,11 +601,11 @@ nav ul {
         <section>
                 <h3>What did we do last time?</h3><br>
             <ul>   
-                <li>history of html5</li><br>
-                <li>new structural elements: section, header, nav, footer, aside, article</li><br>
-                <li>beginning our profile from scratch</li><br>
+                <li>History of HTML5</li><br>
+                <li>New structural elements: section, header, nav, footer, aside, article</li><br>
+                <li>Fixed Navigation</li><br>
             </ul><br>
-            <p>Where did we leave off...</p>
+            <p>Let's go...</p>
             </section>
         <section><h3>Back to your profile page!</h3></section>
             <section data-background="#f05b62">
